--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+<h1>Мой первый JS скрипт</h1>
+<div id="main_block">
+    <div id="hour_seconds"></div>
+    <div id="day_seconds"></div>
+    <div id="month_seconds"></div>
+</div>
 <script src="script/script.js"></script>
 </body>
 </html>
