--- a/index.html
+++ b/index.html
@@ -15,77 +15,9 @@
         <h1>Currency converter</h1>
     </div>
     <div class="date"></div>
-    <ul class="currencies">
-<!--        <li class="currency base-currency" id="USD">-->
-<!--            <img src="https://www.geonames.org/flags/l/us.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#36;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">USD - US Dollar</p>-->
-<!--                <p class="base-currency-rate">1 USD = 1 USD</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="JPY">-->
-<!--            <img src="https://www.geonames.org/flags/l/jp.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#165;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">JPY - Japanese Yen</p>-->
-<!--                <p class="base-currency-rate">1 USD = 111.0401 JPY</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="EUR">-->
-<!--            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#8364;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">JPY - EURO</p>-->
-<!--                <p class="base-currency-rate">1 USD = 0.8875 EUR</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="GBP">-->
-<!--            <img src="https://www.geonames.org/flags/l/uk.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#163;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">GBP - British Pound</p>-->
-<!--                <p class="base-currency-rate">1 USD = 0.7805 GBP</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="RUB">-->
-<!--            <img src="https://www.geonames.org/flags/l/ru.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#8381;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">RUB - Russian Ruble</p>-->
-<!--                <p class="base-currency-rate">1 USD = 66.9615 RUB</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="CNY">-->
-<!--            <img src="https://www.geonames.org/flags/l/cn.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#165;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">CNY - Chinese Yuan Renminbi</p>-->
-<!--                <p class="base-currency-rate">1 USD = 6.7756 CNY</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-<!--        <li class="currency" id="INR">-->
-<!--            <img src="https://www.geonames.org/flags/l/in.gif" class="flag">-->
-<!--            <div class="info">-->
-<!--                <p class="input"><span class="currency-symbol">&#8377;</span><input placeholder="0.0000"></p>-->
-<!--                <p class="currency-name">INR - Indian Rupee</p>-->
-<!--                <p class="base-currency-rate">1 USD = 71.1777 INR</p>-->
-<!--            </div>-->
-<!--            <span class="close">&times;</span>-->
-<!--        </li>-->
-    </ul>
+    <ul class="currencies"></ul>
     <button class="add-currency-btn "><i class="fas fa-long-arrow-alt-left"></i>Add Currency</button>
     <ul class="add-currency-list">
-<!--        <li data-currency="USD" class="disabled"><img src="https://www.geonames.org/flags/l/us.gif" class="flag"><span>USD - US Dollar</span></li>-->
-<!--        <li data-currency="NZD"><img src="https://www.geonames.org/flags/l/nz.gif" class="flag"><span>NZD - New Zealand Dollar</span></li>-->
-<!--        <li data-currency="CAD"><img src="https://www.geonames.org/flags/l/ca.gif" class="flag"><span>CAD - Canadian Dollar</span></li>-->
-<!--        <li data-currency="MXN"><img src="https://www.geonames.org/flags/l/mx.gif" class="flag"><span>MXN - Mexican Peso</span></li>-->
     </ul>
 </div>
 
